@@ -1,4 +1,4 @@
-;;; py-interactive-tests.el --- Tests expected to succeed interactively -*- lexical-binding: t; -*- 
+;;; py-interactive-tests.el --- Tests expected to succeed interactively -*- lexical-binding: t; -*-
 
 ;; Copyright (C) 2015  Andreas Röhler
 
@@ -23,86 +23,6 @@
 ;;
 
 ;;; Code:
-
-(ert-deftest py-ert-execute-block-jython-test ()
-  (let ((buffer (py--choose-buffer-name "jython")))
-    (py-test-with-temp-buffer
-        "if True:
-    print(\"one\")
-    print(\"two\")"
-      (py-execute-block-jython)
-      (set-buffer buffer)
-      (should (search-backward "two")))))
-
-(ert-deftest py-ert-execute-block-ipython2.7-test ()
-  (let ((buffer (py--choose-buffer-name "ipython2.7")))
-    (py-test-with-temp-buffer
-        "if True:
-    print(\"one\")
-    print(\"two\")"
-      (py-execute-block-ipython2.7)
-      (set-buffer buffer)
-      (should (search-backward "two")))))
-
-(ert-deftest py-ert-execute-block-fast-2 ()
-  (py-test-with-temp-buffer-point-min
-      "try:
-    a
-except NameError:
-    a=1
-finally:
-    a+=1
-    print(a)"
-    (let ((py-fast-process-p t)
-	  (py-return-result-p t)
-	  (py-debug-p t)
-	  py-result)
-      (py-execute-block)
-      (when py-debug-p (message "py-ert-execute-block-fast, py-result: %s" py-result))
-      (should (numberp (string-to-number (car (split-string py-result))))))))
-
-(ert-deftest py-ert-kill-statements-test ()
-  (py-test-with-temp-buffer
-      "with file(\"roulette-\" + zeit + \".csv\", 'w') as datei:
-    for i in range(anzahl):
-        klauf.pylauf()
-        datei.write(str(spiel[i]) + \"\\n\")
-    datei.write(\"treffer; schwarz; gruen; rot; pair; impair; passe; manque; spiel\\n\")
-    print(''' asdf' asdf asdf asdf asdf asdfasdf asdfasdf a asdf asdf asdf asdfasdfa asdf asdf asdf asdf
-''')"
-    (when py-debug-p (switch-to-buffer (current-buffer))
-	  (font-lock-fontify-buffer))
-    (forward-line -2)
-    (back-to-indentation)
-    (py-kill-statements)
-    (sit-for 0.1)
-    (should-not (char-after))
-    ;; (should (eobp))
-    ;; (should (looking-at "\\'"))
-    ))
-
-(ert-deftest py-ert-execute-block-fast-3 ()
-  (py-test-with-temp-buffer-point-min
-      "if True:
-    a = 1
-    print(a)"
-    (let ((py-fast-process-p t)
-	  (py-return-result-p t)
-	  (py-debug-p t)
-	  py-result)
-      (py-execute-block)
-      (when py-debug-p (message "py-ert-execute-block-fast, py-result: %s" py-result))
-      (sit-for 0.1 t)
-      (should (string= "1" py-result)))))
-
-(ert-deftest py-ert-exception-name-face-lp-1294742 ()
-  (py-test-with-temp-buffer-point-min
-      " ArithmeticError AssertionError AttributeError BaseException BufferError BytesWarning DeprecationWarning EOFError EnvironmentError Exception FloatingPointError FutureWarning GeneratorExit IOError ImportError ImportWarning IndentationError IndexError KeyError KeyboardInterrupt LookupError MemoryError NameError NoResultFound NotImplementedError OSError OverflowError PendingDeprecationWarning ReferenceError RuntimeError RuntimeWarning StandardError StopIteration SyntaxError SyntaxWarning SystemError SystemExit TabError TypeError UnboundLocalError UnicodeDecodeError UnicodeEncodeError UnicodeError UnicodeTranslateError UnicodeWarning UserWarning ValueError Warning ZeroDivisionError"
-    (when py-debug-p (switch-to-buffer (current-buffer))
-	  (font-lock-fontify-buffer))
-    (while (and (not (eobp))(< 0 (skip-chars-forward " ")))
-      (should (eq 'py-exception-name-face (get-char-property (point) 'face)))
-      (skip-chars-forward "^ \n"))))
 
 (defun py-shell-complete-test (&optional arg load-branch-function)
   (interactive "p")
@@ -165,18 +85,6 @@ impo")))
 		    ;; python may just offer print(
 		    (buffer-live-p (get-buffer  "*Python Completions*"))))
       (py-kill-buffer-unconditional erg)))))
-
-(ert-deftest py-ert-moves-up-execute-statement-python3-dedicated-test ()
-  (py-test-with-temp-buffer-point-min
-      "print(\"I'm the py-execute-statement-python3-dedicated-test\")"
-    (let ((py-debug-p t)
-	  py-store-result-p
-	  erg)
-      (call-interactively 'py-execute-statement-python3-dedicated)
-      (sit-for 0.1 t)
-      (set-buffer py-buffer-name)
-      (goto-char (point-min))
-      (should (search-forward "py-execute-statement-python3-dedicated-test" nil t 1)))))
 
 (provide 'py-interactive-tests)
 ;;; py-interactive-tests.el ends here
