@@ -12,8 +12,10 @@ how to fontify py-shell buffer:
 
 "input" will leave previous IN/OUT unfontified.
 "all" keeps output fontified too.
-
 Default is nil, no fontification.
+
+Always indicate the PythonVERSION in buffer-name
+wherever python points to
 
 New in version 6.2.2
 ---------------------
